--- a/python/sdk/Dockerfile
+++ b/python/sdk/Dockerfile
@@ -6,6 +6,8 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
+RUN chmod +x /app/entrypoint.sh
+
 EXPOSE 8000
 
 ENTRYPOINT [ "/app/entrypoint.sh" ] 
