--- a/.github/automerge-dependabot-prs.yml
+++ b/.github/automerge-dependabot-prs.yml
@@ -1,6 +1,12 @@
 name: Auto-merge Dependabot PRs
+# Check if an exiting pull request was made by Dependabot, and if so, approve and enable auto-merge for the PR.
+# Or, run this on any net-new dependabot PRs, and approve and enable auto-merge for those PRs.
+on:
+  pull_request:
+    types: [opened, synchronize]
+    branches:
+      - main
 
-on: pull_request
 
 permissions:
   contents: write
