--- a/.github/workflows/automerge-dependabot-prs.yml
+++ b/.github/workflows/automerge-dependabot-prs.yml
@@ -4,6 +4,8 @@ name: Auto-merge Dependabot PRs
 on:
   pull_request:
     types: [opened, synchronize]
+    # match dependabot branches
+    # match main branch
     branches:
       - main
       - 'dependabot/**'
@@ -15,9 +17,10 @@ permissions:
   pull-requests: write
 
 jobs:
+  # Job for new Dependabot PRs (triggered by pull_request events)
   dependabot:
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot[bot]' }}
+    if: ${{ github.event_name == 'pull_request' && github.actor == 'dependabot[bot]' }}
     steps:
       - name: Approve a PR
         run: gh pr review --approve "$PR_URL"
@@ -28,4 +31,44 @@ jobs:
         run: gh pr merge --auto --rebase "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+  # Job for processing all existing Dependabot PRs (triggered manually)
+  process-existing-dependabot-prs:
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    steps:
+      - name: Process all open Dependabot PRs
+        run: |
+          echo "Fetching all open Dependabot PRs..."
+          # Get all open PRs authored by dependabot[bot]
+          prs=$(gh pr list --repo "$GITHUB_REPOSITORY" --author "app/dependabot" --state open --json number,url --jq '.[].url')
+          
+          if [ -z "$prs" ]; then
+            echo "No open Dependabot PRs found."
+            exit 0
+          fi
+          
+          echo "Found the following Dependabot PRs:"
+          echo "$prs"
+          echo ""
+          
+          # Loop through each PR and approve + enable auto-merge
+          for pr_url in $prs; do
+            echo "Processing: $pr_url"
+            
+            # Approve the PR
+            echo "  Approving..."
+            gh pr review --approve "$pr_url" || echo "  Warning: Could not approve (may already be approved)"
+            
+            # Enable auto-merge
+            echo "  Enabling auto-merge..."
+            gh pr merge --auto --rebase "$pr_url" || echo "  Warning: Could not enable auto-merge (may already be enabled or have conflicts)"
+            
+            echo "  Done."
+            echo ""
+          done
+          
+          echo "Finished processing all Dependabot PRs."
+        env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
