--- a/.github/workflows/automerge-dependabot-prs.yml
+++ b/.github/workflows/automerge-dependabot-prs.yml
@@ -28,7 +28,7 @@ jobs:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - name: Enable auto-merge for Dependabot PRs
-        run: gh pr merge --auto --rebase "$PR_URL"
+        run: gh pr merge --admin --rebase "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -63,7 +63,7 @@ jobs:
             
             # Enable auto-merge
             echo "  Enabling auto-merge..."
-            gh pr merge --auto --rebase "$pr_url" || echo "  Warning: Could not enable auto-merge (may already be enabled or have conflicts)"
+            gh pr merge --admin --rebase "$pr_url" || echo "  Warning: Could not enable auto-merge (may already be enabled or have conflicts)"
             
             echo "  Done."
             echo ""
